--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -12831,7 +12831,8 @@
    ],
    "source": [
     "scrap_director = soup.find_all(\"a\", class_=\"ipc-link ipc-link--baseAlt sc-9bca7e5d-0 ktChvQ\")\n",
-    "scrap_director"
+    "scrap_director\n",
+    "#could not scrape the data since its not in the same webpage"
    ]
   },
   {
