Eva Castro lab web scraping

--- a/lab-web-scraping Eva.ipynb
+++ b/lab-web-scraping Eva.ipynb
@@ -124,47 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "0c138da7-8ab8-4a72-88c4-82b28fa88f41",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "200\n"
-     ]
-    }
-   ],
-   "source": [
-    "url ='https://www.imdb.com/list/ls025598828/' #Accedemos con una url distinta por que nos esta devolvindo un requests 403 la web\n",
-    "res = requests.get(url)\n",
-    "print(res.status_code)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
-   "id": "70ec7d27-3aa0-4e82-a3e1-19ab13761ebe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "soup = BeautifulSoup(res.content, 'html.parser')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "291fcc82-8104-441f-9de4-6e579228ba37",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "title = soup.find_all('h3',{'class':\"lister-item-header\"})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
    "id": "56c5b8ab-a40a-4278-9dc8-46a61375d973",
    "metadata": {},
    "outputs": [],
@@ -257,10 +217,390 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d27263a6-39b3-4064-ad9d-52e9d16ab077",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Movie Number</th>\n",
+       "      <th>Movie Title</th>\n",
+       "      <th>Release Year</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Votes</th>\n",
+       "      <th>Runtime</th>\n",
+       "      <th>Genre</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Director</th>\n",
+       "      <th>Stars</th>\n",
+       "      <th>Gross</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.</td>\n",
+       "      <td>Reservoir Dogs</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>1,087,847</td>\n",
+       "      <td>99 min</td>\n",
+       "      <td>Crime, Thriller</td>\n",
+       "      <td>When a simple jewelry heist goes horribly wron...</td>\n",
+       "      <td>Quentin Tarantino</td>\n",
+       "      <td>[Harvey Keitel, Tim Roth, Michael Madsen, Chri...</td>\n",
+       "      <td>1,087,847</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.</td>\n",
+       "      <td>El silencio de los corderos</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>1,547,654</td>\n",
+       "      <td>118 min</td>\n",
+       "      <td>Crime, Drama, Thriller</td>\n",
+       "      <td>A young F.B.I. cadet must receive the help of ...</td>\n",
+       "      <td>Jonathan Demme</td>\n",
+       "      <td>[Jodie Foster, Anthony Hopkins, Scott Glenn, T...</td>\n",
+       "      <td>1,547,654</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.</td>\n",
+       "      <td>Terminator 2: El juicio final</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>1,173,608</td>\n",
+       "      <td>137 min</td>\n",
+       "      <td>Action, Adventure, Sci-Fi</td>\n",
+       "      <td>A cyborg, identical to the one who failed to k...</td>\n",
+       "      <td>James Cameron</td>\n",
+       "      <td>[Arnold Schwarzenegger, Linda Hamilton, Edward...</td>\n",
+       "      <td>1,173,608</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.</td>\n",
+       "      <td>Uno de los nuestros</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>8.7</td>\n",
+       "      <td>1,256,872</td>\n",
+       "      <td>145 min</td>\n",
+       "      <td>Biography, Crime, Drama</td>\n",
+       "      <td>The story of Henry Hill and his life in the ma...</td>\n",
+       "      <td>Martin Scorsese</td>\n",
+       "      <td>[Robert De Niro, Ray Liotta, Joe Pesci, Lorrai...</td>\n",
+       "      <td>1,256,872</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.</td>\n",
+       "      <td>El padrino parte III</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>423,956</td>\n",
+       "      <td>162 min</td>\n",
+       "      <td>Crime, Drama</td>\n",
+       "      <td>Follows Michael Corleone, now in his 60s, as h...</td>\n",
+       "      <td>Francis Ford Coppola</td>\n",
+       "      <td>[Al Pacino, Diane Keaton, Andy Garcia, Talia S...</td>\n",
+       "      <td>423,956</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6.</td>\n",
+       "      <td>Algunos hombres buenos</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>287,230</td>\n",
+       "      <td>138 min</td>\n",
+       "      <td>Drama, Thriller</td>\n",
+       "      <td>Military lawyer Lieutenant Daniel Kaffee defen...</td>\n",
+       "      <td>Rob Reiner</td>\n",
+       "      <td>[Tom Cruise, Jack Nicholson, Demi Moore, Kevin...</td>\n",
+       "      <td>287,230</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7.</td>\n",
+       "      <td>JFK: Caso abierto</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>8</td>\n",
+       "      <td>169,868</td>\n",
+       "      <td>189 min</td>\n",
+       "      <td>Drama, History, Thriller</td>\n",
+       "      <td>New Orleans District Attorney Jim Garrison dis...</td>\n",
+       "      <td>Oliver Stone</td>\n",
+       "      <td>[Kevin Costner, Gary Oldman, Jack Lemmon, Walt...</td>\n",
+       "      <td>169,868</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8.</td>\n",
+       "      <td>Los chicos del barrio</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>154,557</td>\n",
+       "      <td>112 min</td>\n",
+       "      <td>Crime, Drama</td>\n",
+       "      <td>Follows the lives of three young males living ...</td>\n",
+       "      <td>John Singleton</td>\n",
+       "      <td>[Cuba Gooding Jr., Laurence Fishburne, Hudhail...</td>\n",
+       "      <td>154,557</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9.</td>\n",
+       "      <td>Sin perdón</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>436,040</td>\n",
+       "      <td>130 min</td>\n",
+       "      <td>Drama, Western</td>\n",
+       "      <td>Retired Old West gunslinger William Munny relu...</td>\n",
+       "      <td>Clint Eastwood</td>\n",
+       "      <td>[Clint Eastwood, Gene Hackman, Morgan Freeman,...</td>\n",
+       "      <td>436,040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10.</td>\n",
+       "      <td>Desafío total</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>354,429</td>\n",
+       "      <td>113 min</td>\n",
+       "      <td>Action, Adventure, Sci-Fi</td>\n",
+       "      <td>When a man goes in to have virtual vacation me...</td>\n",
+       "      <td>Paul Verhoeven</td>\n",
+       "      <td>[Arnold Schwarzenegger, Sharon Stone, Michael ...</td>\n",
+       "      <td>354,429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11.</td>\n",
+       "      <td>Malcolm X</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>102,000</td>\n",
+       "      <td>202 min</td>\n",
+       "      <td>Biography, Drama, History</td>\n",
+       "      <td>Biographical epic of the controversial and inf...</td>\n",
+       "      <td>Spike Lee</td>\n",
+       "      <td>[Denzel Washington, Angela Bassett, Delroy Lin...</td>\n",
+       "      <td>102,000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12.</td>\n",
+       "      <td>Barton Fink</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>128,938</td>\n",
+       "      <td>116 min</td>\n",
+       "      <td>Comedy, Drama, Thriller</td>\n",
+       "      <td>A renowned New York playwright is enticed to C...</td>\n",
+       "      <td>Joel Coen</td>\n",
+       "      <td>[Ethan Coen, John Turturro, John Goodman, Judy...</td>\n",
+       "      <td>128,938</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>13.</td>\n",
+       "      <td>Braindead: tu madre se ha comido a mi perro</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>103,262</td>\n",
+       "      <td>104 min</td>\n",
+       "      <td>Comedy, Fantasy, Horror</td>\n",
+       "      <td>A young man's mother is bitten by a Sumatran r...</td>\n",
+       "      <td>Peter Jackson</td>\n",
+       "      <td>[Timothy Balme, Diana Peñalver, Elizabeth Mood...</td>\n",
+       "      <td>103,262</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14.</td>\n",
+       "      <td>Mi primo Vinny</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>140,500</td>\n",
+       "      <td>120 min</td>\n",
+       "      <td>Comedy, Crime</td>\n",
+       "      <td>Two New Yorkers accused of murder in rural Ala...</td>\n",
+       "      <td>Jonathan Lynn</td>\n",
+       "      <td>[Joe Pesci, Marisa Tomei, Ralph Macchio, Mitch...</td>\n",
+       "      <td>140,500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>15.</td>\n",
+       "      <td>El último mohicano</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>187,577</td>\n",
+       "      <td>112 min</td>\n",
+       "      <td>Action, Adventure, Drama</td>\n",
+       "      <td>Three trappers protect the daughters of a Brit...</td>\n",
+       "      <td>Michael Mann</td>\n",
+       "      <td>[Daniel Day-Lewis, Madeleine Stowe, Russell Me...</td>\n",
+       "      <td>187,577</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>16.</td>\n",
+       "      <td>Misery</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>235,469</td>\n",
+       "      <td>107 min</td>\n",
+       "      <td>Drama, Thriller</td>\n",
+       "      <td>After a famous author is rescued from a car cr...</td>\n",
+       "      <td>Rob Reiner</td>\n",
+       "      <td>[James Caan, Kathy Bates, Richard Farnsworth, ...</td>\n",
+       "      <td>235,469</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>17.</td>\n",
+       "      <td>Esencia de mujer</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>8</td>\n",
+       "      <td>328,627</td>\n",
+       "      <td>156 min</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>A prep school student needing money agrees to ...</td>\n",
+       "      <td>Martin Brest</td>\n",
+       "      <td>[Al Pacino, Chris O'Donnell, James Rebhorn, Ga...</td>\n",
+       "      <td>328,627</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>18.</td>\n",
+       "      <td>Tomates verdes fritos</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>83,529</td>\n",
+       "      <td>130 min</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>Evelyn, an ordinary housewife, visits a nursin...</td>\n",
+       "      <td>Jon Avnet</td>\n",
+       "      <td>[Kathy Bates, Jessica Tandy, Mary Stuart Maste...</td>\n",
+       "      <td>83,529</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Movie Number                                  Movie Title Release Year  \\\n",
+       "0            1.                               Reservoir Dogs         1992   \n",
+       "1            2.                  El silencio de los corderos         1991   \n",
+       "2            3.                Terminator 2: El juicio final         1991   \n",
+       "3            4.                          Uno de los nuestros         1990   \n",
+       "4            5.                         El padrino parte III         1990   \n",
+       "5            6.                       Algunos hombres buenos         1992   \n",
+       "6            7.                            JFK: Caso abierto         1991   \n",
+       "7            8.                        Los chicos del barrio         1991   \n",
+       "8            9.                                   Sin perdón         1992   \n",
+       "9           10.                                Desafío total         1990   \n",
+       "10          11.                                    Malcolm X         1992   \n",
+       "11          12.                                  Barton Fink         1991   \n",
+       "12          13.  Braindead: tu madre se ha comido a mi perro         1992   \n",
+       "13          14.                               Mi primo Vinny         1992   \n",
+       "14          15.                           El último mohicano         1992   \n",
+       "15          16.                                       Misery         1990   \n",
+       "16          17.                             Esencia de mujer         1992   \n",
+       "17          18.                        Tomates verdes fritos         1991   \n",
+       "\n",
+       "   Rating      Votes  Runtime                                  Genre  \\\n",
+       "0     8.3  1,087,847   99 min            Crime, Thriller               \n",
+       "1     8.6  1,547,654  118 min     Crime, Drama, Thriller               \n",
+       "2     8.6  1,173,608  137 min  Action, Adventure, Sci-Fi               \n",
+       "3     8.7  1,256,872  145 min    Biography, Crime, Drama               \n",
+       "4     7.6    423,956  162 min               Crime, Drama               \n",
+       "5     7.7    287,230  138 min            Drama, Thriller               \n",
+       "6       8    169,868  189 min   Drama, History, Thriller               \n",
+       "7     7.8    154,557  112 min               Crime, Drama               \n",
+       "8     8.2    436,040  130 min             Drama, Western               \n",
+       "9     7.5    354,429  113 min  Action, Adventure, Sci-Fi               \n",
+       "10    7.7    102,000  202 min  Biography, Drama, History               \n",
+       "11    7.6    128,938  116 min    Comedy, Drama, Thriller               \n",
+       "12    7.5    103,262  104 min    Comedy, Fantasy, Horror               \n",
+       "13    7.6    140,500  120 min              Comedy, Crime               \n",
+       "14    7.7    187,577  112 min   Action, Adventure, Drama               \n",
+       "15    7.8    235,469  107 min            Drama, Thriller               \n",
+       "16      8    328,627  156 min                      Drama               \n",
+       "17    7.7     83,529  130 min                      Drama               \n",
+       "\n",
+       "                                          Description              Director  \\\n",
+       "0   When a simple jewelry heist goes horribly wron...     Quentin Tarantino   \n",
+       "1   A young F.B.I. cadet must receive the help of ...        Jonathan Demme   \n",
+       "2   A cyborg, identical to the one who failed to k...         James Cameron   \n",
+       "3   The story of Henry Hill and his life in the ma...       Martin Scorsese   \n",
+       "4   Follows Michael Corleone, now in his 60s, as h...  Francis Ford Coppola   \n",
+       "5   Military lawyer Lieutenant Daniel Kaffee defen...            Rob Reiner   \n",
+       "6   New Orleans District Attorney Jim Garrison dis...          Oliver Stone   \n",
+       "7   Follows the lives of three young males living ...        John Singleton   \n",
+       "8   Retired Old West gunslinger William Munny relu...        Clint Eastwood   \n",
+       "9   When a man goes in to have virtual vacation me...        Paul Verhoeven   \n",
+       "10  Biographical epic of the controversial and inf...             Spike Lee   \n",
+       "11  A renowned New York playwright is enticed to C...             Joel Coen   \n",
+       "12  A young man's mother is bitten by a Sumatran r...         Peter Jackson   \n",
+       "13  Two New Yorkers accused of murder in rural Ala...         Jonathan Lynn   \n",
+       "14  Three trappers protect the daughters of a Brit...          Michael Mann   \n",
+       "15  After a famous author is rescued from a car cr...            Rob Reiner   \n",
+       "16  A prep school student needing money agrees to ...          Martin Brest   \n",
+       "17  Evelyn, an ordinary housewife, visits a nursin...             Jon Avnet   \n",
+       "\n",
+       "                                                Stars      Gross  \n",
+       "0   [Harvey Keitel, Tim Roth, Michael Madsen, Chri...  1,087,847  \n",
+       "1   [Jodie Foster, Anthony Hopkins, Scott Glenn, T...  1,547,654  \n",
+       "2   [Arnold Schwarzenegger, Linda Hamilton, Edward...  1,173,608  \n",
+       "3   [Robert De Niro, Ray Liotta, Joe Pesci, Lorrai...  1,256,872  \n",
+       "4   [Al Pacino, Diane Keaton, Andy Garcia, Talia S...    423,956  \n",
+       "5   [Tom Cruise, Jack Nicholson, Demi Moore, Kevin...    287,230  \n",
+       "6   [Kevin Costner, Gary Oldman, Jack Lemmon, Walt...    169,868  \n",
+       "7   [Cuba Gooding Jr., Laurence Fishburne, Hudhail...    154,557  \n",
+       "8   [Clint Eastwood, Gene Hackman, Morgan Freeman,...    436,040  \n",
+       "9   [Arnold Schwarzenegger, Sharon Stone, Michael ...    354,429  \n",
+       "10  [Denzel Washington, Angela Bassett, Delroy Lin...    102,000  \n",
+       "11  [Ethan Coen, John Turturro, John Goodman, Judy...    128,938  \n",
+       "12  [Timothy Balme, Diana Peñalver, Elizabeth Mood...    103,262  \n",
+       "13  [Joe Pesci, Marisa Tomei, Ralph Macchio, Mitch...    140,500  \n",
+       "14  [Daniel Day-Lewis, Madeleine Stowe, Russell Me...    187,577  \n",
+       "15  [James Caan, Kathy Bates, Richard Farnsworth, ...    235,469  \n",
+       "16  [Al Pacino, Chris O'Donnell, James Rebhorn, Ga...    328,627  \n",
+       "17  [Kathy Bates, Jessica Tandy, Mary Stuart Maste...     83,529  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "title_type = 'movie'\n",
     "user_rating= '7.5'\n",
