--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "id": "08adad9f",
    "metadata": {},
    "outputs": [],
@@ -27,12 +27,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "1286560e",
+   "execution_count": 5,
+   "id": "3c0da0f6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
+    "# Create a function named scrape_imdb that takes four parameters: title_type,user_rating, start_date, and end_date\n",
     "def scrape_imdb(title_type, user_rating, start_year, end_year):\n",
     "    url = f'https://www.imdb.com/list/ls025598828/?sort=list_order,asc&st_dt=&mode=detail&page=1' \\\n",
     "          f'&title_type={title_type}&user_rating={user_rating}%2C&release_date={start_year}%2C{end_year}&ref_=ttls_ref_yr'\n",
@@ -121,8 +121,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "c3eb6157",
+   "execution_count": 6,
+   "id": "9e4e573f",
    "metadata": {},
    "outputs": [
     {
@@ -498,12 +498,13 @@
        "17  [Kathy Bates, Jessica Tandy, Mary Stuart Maste...     83,530  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Return a DataFrame with the following columns:\n",
     "title_type = 'movie'\n",
     "user_rating= '7.5'\n",
     "start_year = '1990'\n",
