--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -109,14 +109,78 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "40359eee-9cd7-4884-bfa4-83344c222305",
       "metadata": {
         "id": "40359eee-9cd7-4884-bfa4-83344c222305"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Empty DataFrame\n",
+            "Columns: []\n",
+            "Index: []\n"
+          ]
+        }
+      ],
       "source": [
-        "# Your solution goes here"
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "\n",
+        "def scrape_imdb(title_type, user_rating, start_date, end_date):\n",
+        "    \n",
+        "    url = f\"https://www.imdb.com/search/title/?title_type={title_type}&user_rating={user_rating},&release_date={start_date},{end_date}&sort=user_rating,desc\"\n",
+        "\n",
+        "   \n",
+        "    response = requests.get(url)\n",
+        "    soup = BeautifulSoup(response.text, 'html.parser')\n",
+        "\n",
+        "    \n",
+        "    movies = []\n",
+        "\n",
+        "    \n",
+        "    movie_containers = soup.findAll('div', class_='lister-item mode-advanced')\n",
+        "    for container in movie_containers:\n",
+        "       \n",
+        "        number = container.find('h3', class_='lister-item-header').find('span', class_='lister-item-index').get_text(strip=True)\n",
+        "        title = container.h3.a.text\n",
+        "        year = container.h3.find('span', class_='lister-item-year').text\n",
+        "        rating = container.find('div', class_='inline-block ratings-imdb-rating').strong.text if container.find('div', class_='inline-block ratings-imdb-rating') else ''\n",
+        "        runtime = container.find('span', class_='runtime').text if container.find('span', class_='runtime') else ''\n",
+        "        genres = container.find('span', class_='genre').text.strip() if container.find('span', class_='genre') else ''\n",
+        "        description = container.find_all('p', class_='text-muted')[1].text.strip()\n",
+        "        director = ''\n",
+        "        stars = ''\n",
+        "        crew = container.find('p', class_='')\n",
+        "        if crew:\n",
+        "            crew = crew.text.strip().split('|')\n",
+        "            if len(crew) == 2:\n",
+        "                director = crew[0].replace('Director:', '').replace('Directors:', '').strip()\n",
+        "                stars = crew[1].replace('Stars:', '').strip()\n",
+        "        \n",
+        "        \n",
+        "        movies.append({\n",
+        "            'Movie Nr': number,\n",
+        "            'Title': title,\n",
+        "            'Year': year,\n",
+        "            'Rating': rating,\n",
+        "            'Runtime (min)': runtime,\n",
+        "            'Genre': genres,\n",
+        "            'Description': description,\n",
+        "            'Director': director,\n",
+        "            'Stars': stars\n",
+        "        })\n",
+        "\n",
+        "   \n",
+        "    df = pd.DataFrame(movies)\n",
+        "    return df\n",
+        "\n",
+        "\n",
+        "df = scrape_imdb('feature', '7.5,', '1990-01-01', '1992-12-31')\n",
+        "print(df.head())\n"
       ]
     },
     {
@@ -163,6 +227,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -178,10 +245,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
-    },
-    "colab": {
-      "provenance": []
+      "version": "3.11.7"
     }
   },
   "nbformat": 4,
