--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -116,8 +116,300 @@
       },
       "outputs": [],
       "source": [
-        "# Your solution goes here"
+        "# Your solution goes here\n",
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "\n",
+        "# url = \"https://www.decathlon.com/collections/mountain-bikes\"\n",
+        "# response = requests.get(url)\n",
+        "# soup = BeautifulSoup(response.content, \"html.parser\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "452a77d7",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import re"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "76683891",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def scrape_imdb(title_type, user_rating, start_date, end_date):\n",
+        "    \n",
+        "    url = f\"https://www.imdb.com/search/title/?title_type={title_type}&user_rating={user_rating}&release_date={start_date},{end_date}\"\n",
+        "    # url = 'https://www.imdb.com/search/title/?title_type=feature&release_date=1990-01-01,1992-12-31&user_rating=7.5,10'\n",
+        "    headers = {\n",
+        "        \"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36\"\n",
+        "    }\n",
+        "    response = requests.get(url, headers=headers)\n",
+        "    # response = requests.get(url)\n",
+        "    print(response)\n",
+        "    soup = BeautifulSoup(response.text, 'html.parser')\n",
+        "\n",
+        "    movies = soup.find_all('li', class_='ipc-metadata-list-summary-item')\n",
+        "\n",
+        "    return movies\n",
+        "\n",
+        "# Teste\n",
+        "result = scrape_imdb('feature', 7.5, '1990-01-01', '1992-12-31')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "00a3b6a3",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "data = {\n",
+        "        'Movie_Nr': [],\n",
+        "        'Title': [],\n",
+        "        'Year': [],\n",
+        "        'Rating': [],\n",
+        "        'Runtime': [],\n",
+        "        'Genre': [],\n",
+        "        'Description': [],\n",
+        "        'Director': [],\n",
+        "        'Stars': [],\n",
+        "        'Votes': [],\n",
+        "        'Gross ($M)': []\n",
+        "    }\n",
+        "datac = pd.DataFrame(data)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "6a6d0318",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def scrape_content(movies,data):\n",
+        "    for i, movie in enumerate(movies):\n",
+        "\n",
+        "        pattern = r'(\\d+\\.)'\n",
+        "        pattern_title = r\"([^0-9.\\s].+)\"\n",
+        "\n",
+        "        number = re.search(pattern, movie.find('h3').text).group(1)\n",
+        "        title = re.search(pattern_title, movie.find('h3').text).group(1)\n",
+        "        meta_Y_H_R = movie.find_all(name='span', class_='sc-b189961a-8 kLaxqf dli-title-metadata-item')\n",
+        "        # hours = re.search(r'\\dh(\\s\\d+m)?', meta_Y_H_R[4:])\n",
+        "        stars = movie.find('span', class_='ipc-rating-star ipc-rating-star--base ipc-rating-star--imdb ratingGroup--imdb-rating').get('aria-label')\n",
+        "        vote = movie.find('span', class_='ipc-rating-star--voteCount').text\n",
+        "        Description = movie.find('div', class_='ipc-html-content ipc-html-content--base sc-74bf520e-0 iiRKKi dli-plot-container').text\n",
+        "        \n",
+        "        data.loc[i,'Movie_Nr'] = number[:-1]\n",
+        "        data.loc[i,'Title'] = title\n",
+        "        data.loc[i, 'Year'] = meta_Y_H_R[0].text\n",
+        "        data.loc[i,'Runtime'] = meta_Y_H_R[1].text\n",
+        "        data.loc[i,'Rating'] = meta_Y_H_R [2].text\n",
+        "        data.loc[i,'Stars'] = stars[13:]\n",
+        "        data.loc[i,'Votes'] = vote\n",
+        "        data.loc[i,'Description'] = Description\n",
+        "\n",
+        "        # data['Genre'].append(movie.find('span', class_='genre').text.strip())        \n",
+        "        # data['Director'].append(movie.find_all('p', class_='')[1].a.text)\n",
+        "        # stars = [star.text for star in movie.find_all('p', class_='')[1].find_all('a')[1:]]\n",
+        "        # data['Stars'].append(', '.join(stars))\n",
+        "        # try:\n",
+        "        #     data['Gross ($M)'].append(float(movie.find('p', class_='sort-num_votes-visible').find_all('span', attrs={'name': 'nv'})[1]['data-value']) / 1000000)\n",
+        "        # except IndexError:\n",
+        "        #     data['Gross ($M)'].append(None)\n",
+        "\n",
+        "        i +=1\n",
+        "    return data\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 463,
+      "id": "53ddb11b",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "   Movie_Nr                                         Title  Year     Rating  \\\n",
+            "0         1                                    Goodfellas  1990          R   \n",
+            "1         2                      The Silence of the Lambs  1991          R   \n",
+            "2         3                    Terminator 2: Judgment Day  1991          R   \n",
+            "3         4                                Reservoir Dogs  1992          R   \n",
+            "4         5                          Fried Green Tomatoes  1991      PG-13   \n",
+            "5         6                        The Godfather Part III  1990          R   \n",
+            "6         7                                  Total Recall  1990          R   \n",
+            "7         8                                    Home Alone  1990         PG   \n",
+            "8         9                      The Last of the Mohicans  1992          R   \n",
+            "9        10                            Dances with Wolves  1990      PG-13   \n",
+            "10       11                                    Unforgiven  1992          R   \n",
+            "11       12                              Scent of a Woman  1992          R   \n",
+            "12       13                               Thelma & Louise  1991          R   \n",
+            "13       14                               My Cousin Vinny  1992          R   \n",
+            "14       15                                A Few Good Men  1992          R   \n",
+            "15       16                               Boyz n the Hood  1991          R   \n",
+            "16       17                                        Misery  1990          R   \n",
+            "17       18                          Beauty and the Beast  1991          G   \n",
+            "18       19                                       Aladdin  1992          G   \n",
+            "19       20                      The Hunt for Red October  1990         PG   \n",
+            "20       21                           Edward Scissorhands  1990      PG-13   \n",
+            "21       22                           Glengarry Glen Ross  1992          R   \n",
+            "22       23                                    Awakenings  1990      PG-13   \n",
+            "23       24                                           JFK  1991          R   \n",
+            "24       25                                     Braindead  1992          R   \n",
+            "25       26                                       Chaplin  1992      PG-13   \n",
+            "26       27                                    The Player  1992          R   \n",
+            "27       28                               The Commitments  1991          R   \n",
+            "28       29                                     Malcolm X  1992      PG-13   \n",
+            "29       30                             Miller's Crossing  1990          R   \n",
+            "30       31                               The Fisher King  1991          R   \n",
+            "31       32                             La Belle Noiseuse  1991    Unrated   \n",
+            "32       33                                   Barton Fink  1991          R   \n",
+            "33       34                               Kurenai no buta  1992         PG   \n",
+            "34       35                                  Delicatessen  1991          R   \n",
+            "35       36                                Night on Earth  1991          R   \n",
+            "36       37                    La double vie de Véronique  1991          R   \n",
+            "37       38                              Lat sau san taam  1992          R   \n",
+            "38       39                             Omohide poro poro  1991         PG   \n",
+            "39       40                            Cyrano de Bergerac  1990         PG   \n",
+            "40       41            Guling jie shaonian sharen shijian  1991  Not Rated   \n",
+            "41       42                           The Five Heartbeats  1991          R   \n",
+            "42       43                                        Baraka  1992  Not Rated   \n",
+            "43       44                                          Yume  1990         PG   \n",
+            "44       45                                Nema-ye Nazdik  1990  Not Rated   \n",
+            "45       46                   Da hong denglong gaogao gua  1991         PG   \n",
+            "46       47                              Paris Is Burning  1990          R   \n",
+            "47       48  Hearts of Darkness: A Filmmaker's Apocalypse  1991          R   \n",
+            "48       49                                        Europa  1991          R   \n",
+            "49       50                       Les amants du Pont-Neuf  1991          R   \n",
+            "\n",
+            "   Runtime  Genre                                        Description  \\\n",
+            "0   2h 25m    NaN  The story of Henry Hill and his life in the ma...   \n",
+            "1   1h 58m    NaN  A young F.B.I. cadet must receive the help of ...   \n",
+            "2   2h 17m    NaN  A cyborg, identical to the one who failed to k...   \n",
+            "3   1h 39m    NaN  When a simple jewelry heist goes horribly wron...   \n",
+            "4   2h 10m    NaN  Evelyn, an ordinary housewife, visits a nursin...   \n",
+            "5   2h 42m    NaN  Follows Michael Corleone, now in his 60s, as h...   \n",
+            "6   1h 53m    NaN  When a man goes in to have virtual vacation me...   \n",
+            "7   1h 43m    NaN  An eight-year-old troublemaker, mistakenly lef...   \n",
+            "8   1h 52m    NaN  Three trappers protect the daughters of a Brit...   \n",
+            "9    3h 1m    NaN  Lieutenant John Dunbar, assigned to a remote w...   \n",
+            "10  2h 10m    NaN  Retired Old West gunslinger William Munny relu...   \n",
+            "11  2h 36m    NaN  A prep school student needing money agrees to ...   \n",
+            "12  2h 10m    NaN  Two best friends set out on an adventure, but ...   \n",
+            "13      2h    NaN  Two New Yorkers accused of murder in rural Ala...   \n",
+            "14  2h 18m    NaN  Military lawyer Lieutenant Daniel Kaffee defen...   \n",
+            "15  1h 52m    NaN  Follows the lives of three young males living ...   \n",
+            "16  1h 47m    NaN  After a famous author is rescued from a car cr...   \n",
+            "17  1h 24m    NaN  A prince cursed to spend his days as a hideous...   \n",
+            "18  1h 30m    NaN  A kind-hearted street urchin and a power-hungr...   \n",
+            "19  2h 15m    NaN  In November 1984, the Soviet Union's best subm...   \n",
+            "20  1h 45m    NaN  The solitary life of an artificial man - who w...   \n",
+            "21  1h 40m    NaN  An examination of the machinations behind the ...   \n",
+            "22   2h 1m    NaN  The victims of an encephalitis epidemic many y...   \n",
+            "23   3h 9m    NaN  New Orleans District Attorney Jim Garrison dis...   \n",
+            "24  1h 44m    NaN  A young man's mother is bitten by a Sumatran r...   \n",
+            "25  2h 23m    NaN  An elderly Charlie Chaplin discusses his autob...   \n",
+            "26   2h 4m    NaN  A Hollywood studio executive is being sent dea...   \n",
+            "27  1h 58m    NaN  Jimmy Rabbitte, an unemployed Dublin boy, deci...   \n",
+            "28  3h 22m    NaN  Biographical epic of the controversial and inf...   \n",
+            "29  1h 55m    NaN  Tom Reagan, an advisor to a Prohibition-era cr...   \n",
+            "30  2h 17m    NaN  A former radio DJ, suicidally despondent becau...   \n",
+            "31  3h 58m    NaN  The former famous painter Frenhofer revisits a...   \n",
+            "32  1h 56m    NaN  A renowned New York playwright is enticed to C...   \n",
+            "33  1h 34m    NaN  In 1930s Italy, a veteran World War I pilot is...   \n",
+            "34  1h 39m    NaN  Post-apocalyptic surrealist black comedy about...   \n",
+            "35   2h 9m    NaN  An anthology of 5 different cab drivers in 5 A...   \n",
+            "36  1h 38m    NaN  Two parallel stories about two identical women...   \n",
+            "37   2h 8m    NaN  A tough-as-nails cop teams up with an undercov...   \n",
+            "38  1h 59m    NaN  A twenty-seven-year-old office worker travels ...   \n",
+            "39  2h 17m    NaN  Famed swordsman and poet Cyrano de Bergerac is...   \n",
+            "40  3h 57m    NaN  Based on a true story, primarily on a conflict...   \n",
+            "41   2h 1m    NaN  The story of the rise and fall of an African A...   \n",
+            "42  1h 36m    NaN  A collection of expertly photographed scenes o...   \n",
+            "43  1h 59m    NaN  A collection of tales based upon eight of dire...   \n",
+            "44  1h 38m    NaN  The true story of Hossain Sabzian, a cinephile...   \n",
+            "45   2h 5m    NaN  China in the 1920s. After her father's death, ...   \n",
+            "46  1h 18m    NaN  A chronicle of New York's drag scene in the 19...   \n",
+            "47  1h 36m    NaN  Documentary that chronicles how Francis Ford C...   \n",
+            "48  1h 52m    NaN  Just after World War II, an American takes a r...   \n",
+            "49   2h 5m    NaN  Alex, who's homeless and addicted to alcohol, ...   \n",
+            "\n",
+            "    Director Stars    Votes  Gross ($M)  \n",
+            "0        NaN   8.7   (1.3M)         NaN  \n",
+            "1        NaN   8.6   (1.6M)         NaN  \n",
+            "2        NaN   8.6   (1.2M)         NaN  \n",
+            "3        NaN   8.3   (1.1M)         NaN  \n",
+            "4        NaN   7.7    (84K)         NaN  \n",
+            "5        NaN   7.6   (425K)         NaN  \n",
+            "6        NaN   7.5   (355K)         NaN  \n",
+            "7        NaN   7.7   (653K)         NaN  \n",
+            "8        NaN   7.7   (188K)         NaN  \n",
+            "9        NaN   8.0   (291K)         NaN  \n",
+            "10       NaN   8.2   (437K)         NaN  \n",
+            "11       NaN   8.0   (329K)         NaN  \n",
+            "12       NaN   7.6   (173K)         NaN  \n",
+            "13       NaN   7.6   (141K)         NaN  \n",
+            "14       NaN   7.7   (288K)         NaN  \n",
+            "15       NaN   7.8   (155K)         NaN  \n",
+            "16       NaN   7.8   (236K)         NaN  \n",
+            "17       NaN   8.0   (480K)         NaN  \n",
+            "18       NaN   8.0   (468K)         NaN  \n",
+            "19       NaN   7.5   (215K)         NaN  \n",
+            "20       NaN   7.9   (524K)         NaN  \n",
+            "21       NaN   7.7   (116K)         NaN  \n",
+            "22       NaN   7.8   (159K)         NaN  \n",
+            "23       NaN   8.0   (170K)         NaN  \n",
+            "24       NaN   7.5   (103K)         NaN  \n",
+            "25       NaN   7.5    (62K)         NaN  \n",
+            "26       NaN   7.5    (66K)         NaN  \n",
+            "27       NaN   7.6    (39K)         NaN  \n",
+            "28       NaN   7.7   (102K)         NaN  \n",
+            "29       NaN   7.7   (142K)         NaN  \n",
+            "30       NaN   7.5    (91K)         NaN  \n",
+            "31       NaN   7.5   (9.4K)         NaN  \n",
+            "32       NaN   7.6   (129K)         NaN  \n",
+            "33       NaN   7.7   (102K)         NaN  \n",
+            "34       NaN   7.5    (90K)         NaN  \n",
+            "35       NaN   7.7    (66K)         NaN  \n",
+            "36       NaN   7.7    (53K)         NaN  \n",
+            "37       NaN   7.7    (54K)         NaN  \n",
+            "38       NaN   7.6    (37K)         NaN  \n",
+            "39       NaN   7.5    (26K)         NaN  \n",
+            "40       NaN   8.2    (13K)         NaN  \n",
+            "41       NaN   7.5   (4.9K)         NaN  \n",
+            "42       NaN   8.5    (41K)         NaN  \n",
+            "43       NaN   7.7    (29K)         NaN  \n",
+            "44       NaN   8.2    (23K)         NaN  \n",
+            "45       NaN   8.1    (35K)         NaN  \n",
+            "46       NaN   8.2    (18K)         NaN  \n",
+            "47       NaN   8.1    (23K)         NaN  \n",
+            "48       NaN   7.5    (23K)         NaN  \n",
+            "49       NaN   7.6    (15K)         NaN  \n"
+          ]
+        }
+      ],
+      "source": [
+        "#teste 2\n",
+        "result2 = scrape_content(result, datac)\n",
+        "print(result2)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "dbbb0e06",
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -163,6 +455,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -178,10 +473,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
-    },
-    "colab": {
-      "provenance": []
+      "version": "3.11.7"
     }
   },
   "nbformat": 4,
